# imgui-todo

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: TodoItem.h  TodoManager.h  TodoUI.h  UIStyle.h
src/: TodoItem.cpp  TodoManager.cpp  TodoUI.cpp  UIStyle.cpp  main.cpp
